--- a/style.css
+++ b/style.css
@@ -121,8 +121,10 @@ hr{
   padding: 50px 0 20px;;
 }
 .copyright{
-  font-size: 0.75rem;
+  font-size: 0.25rem;
 }
 .contact-me{
   padding-top: 10px;
+  width: 50%;
+  margin: auto;
 }
